--- a/rootimeline2.html
+++ b/rootimeline2.html
@@ -391,7 +391,9 @@
 					</span>
 					<span class="A-tv">
 						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; After a great deal of trouble with the
-						prototype, Omega (with Rassilon's help) finishes creating both of the Hands of Omega.&nbsp;</span><span class="A-tv"><span class="A-audiobook"> <span class="A-licensed">&nbsp;Omega proclaims that his Hands will liberate the Gallifreyans from the Chains of Time. On hearing this, Rassilon decrees that</span>&nbsp;</span></span><span class="A-tv"> the manipulator<span class="A-audiobook">s</span> be known as the Hands of Omega. <span class="A-audiobook">He does this for&nbsp;political reasons.</span></span><span class="A-tv"> They are designed to customize stars
+						prototype, Omega (with Rassilon's help) finishes creating both of the Hands of Omega.&nbsp;</span><span class="A-tv"><span class="A-audiobook"> <span class="A-licensed">&nbsp;Omega
+proclaims that his Hands will liberate the Gallifreyans from the Chains
+of Time. On hearing this, Rassilon decrees that</span>&nbsp;</span></span><span class="A-tv"> the manipulator<span class="A-audiobook">s</span> be known as the Hands of Omega. <span class="A-audiobook">He does this for&nbsp;political reasons.</span></span><span class="A-tv"> They are designed to customize stars
 						<span class="A-audiobook">and</span>
 					</span>
 					<span class="A-audiobook">are able to harness and manipulate the entire power output</span>
@@ -479,7 +481,10 @@
 						<span class="A-licensed"> day 43 / </span>
 						<span class="A-audiobook">probably a few centuries before it is complete)</span>
 						<br>
-						<span class="A-tv"> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The architect Rassilon begins designing the Citadel and redesigning the rest of the Capitol. </span>
+						<span class="A-tv">
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; The architect Rassilon begins designing the Citadel
+and redesigning the rest of the Capitol. </span>
 						<span class="A-infinity">The Citadel is designed to be an hourglass shaped fortress. </span>
 						<span class="A-fanon">For more information see: </span>
 						<a href="roogovernment.html#capitol">The Capitol</a>
@@ -545,11 +550,24 @@ ceremonial events <span class="A-audiobook">
 						<span class="A-audiobook">after the looms / before unlimited time travel / almost certainly after the Vampires are released / </span>day 107)
 					</span>
 					<br>
-					<span class="A-licensed"> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Biosynthesist, Thremix, proposes the concept of </span><span class="A-tv"> regeneration</span>
+					<span class="A-licensed">
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; The Biosynthesist, Thremix, proposes the concept of </span><span class="A-tv"> regeneration</span>
 					<span class="A-licensed">and creates the Immortality Virus. </span>
 				</p>
 				<p>
-					<span class="A-notbbc">??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; The ceremonial armor of Faction Paradox is made of the bones of Vampiric Time Lords. The Faction claims that these are the bones of Gallifreyans from an alternate universe where the Time Lords lost the Eternal Wars. Others claim that the contamination happened in this universe during the Eternal War and thus the bones are also derived from the same universe. Official Time Lord history claims that no Time Lord was ever infected with the V-Factor. The Faction Armor could be made of failed experiments in developing Regeneration. Alternately the Armor could be the bones of future Gallifreyans who finally succumbed to the V-Factor in the Immortality Virus. </span>
+					<span class="A-notbbc">??&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; The ceremonial armor of Faction
+Paradox is made of the bones of Vampiric Time Lords. The Faction claims
+that these are the bones of Gallifreyans from an alternate universe
+where the Time Lords lost the Eternal Wars. Others claim that the
+contamination happened in this universe during the Eternal War and thus
+the bones are also derived from the same universe. Official Time Lord
+history claims that no Time Lord was ever infected with the V-Factor.
+The Faction Armor could be made of failed experiments in developing
+Regeneration. Alternately the Armor could be the bones of future
+Gallifreyans who finally succumbed to the V-Factor in the Immortality
+Virus. </span>
 				</p>
 				<p>
 					<span class="A-licensed">
@@ -2149,16 +2167,7 @@ mythological Watchmaker. </span><span class="A-audiobook"><span class="A-audiobo
 					</span>
 				</p>
 				<p align="left">
-					<span class="A-audiobook">??&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;The Other creates the Interventionists</span>
-					<span class="A-tv">
-						<span class="A-audiobook"> including the</span> Celestial Intervention Agency (CIA)</span>
-					<span class="A-audiobook"> from Rassilon's personal guards.
-						<span class="A-licensed">(The Matrix might have also had a hand in their creation).</span>&nbsp;</span><span class="A-notbbc"><span class="A-audiobook">The CIA was originally formed to deal with minor issues that the Time Lords viewed as being beneath them, but they
-							would eventually grew to be a very powerful organization. </span>
-					</span>
-					<span class="A-audiobook">The CIA agents of the Doctor’s time believe that the current CIA is exactly what the Other would have wanted.
-						</span>
-					<span class="A-fanon">For more information see: </span>
+					<span class="A-audiobook">&nbsp;</span><span class="A-audiobook">&nbsp;</span><span class="A-fanon">For more information see: </span>
 					<a href="roogovernment.html#cia">The CIA</a>
 				</p>
 				
