--- a/roobiology.html
+++ b/roobiology.html
@@ -256,7 +256,9 @@
 				<span class="A-audiobook">In the pre-Time War era there are between 3 and 9 million Gallifreyans living on the planet. </span>
 			</div>
 			<div class="section">
-				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave </span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid. </span>They smell of tangy celestial potental. The frames of some looms are silver. A new loom probably takes over 11 years to produce its first loomling. </span>
+				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave </span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid. </span>They
+smell of tangy celestial potental. The frames of some looms are silver.
+A new loom probably takes over 11 years to produce its first loomling. </span>
 				<span class="A-audiobook">The Looms are held in the loomshed of the&nbsp;physical house. Each House's loom has its own Loom core, which serves as
 					its genius loci. This creates a template that standardizes the abilities
 					<span class="A-alternate">and blood </span>of everyone loomling of that family. </span>
@@ -416,9 +418,14 @@ years.&nbsp; <span class="A-fanon">This might be achieved by altering the subjec
 			<div class="section">
 				<span class="A-audiobook">
 					<span class="A-tv">Gallifreyan brains are green in color
-						<span class="A-tv">and larger then a human's.</span> The brain is divided into two hemispheres. One side is the seat of reason, known
-						as the brain proper. The other is the seat of imagination, know as the mind. There is an interface connecting these
-						two hemispheres, and at that point things can exist purely as concepts without corporeal form. </span>
+						<span class="A-tv">and larger then a human's.</span>
+The brain is divided into two hemispheres. One side is the seat of
+reason, known as the brain proper. The other is the seat of
+imagination, know as the mind. There is an interface connecting these
+two hemispheres, and at that point things can exist purely as concepts
+without corporeal form. Under some circumstances, a Gallifreyan brain
+will actually light up when the Gallifreyan speaks (though this effect
+is concealed by the skull). </span>
 				</span>
 			</div>
 			<div class="section">
