--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -641,11 +641,18 @@ grows as time goes by leaving most in a semi-catatonic state. </span>
 						</span>
 						<span class="A-alternate"> and how they do it.&nbsp;</span><span class="A-audiobook">Traditionally, renegades have to leave Gallifrey and travel outer-space to find out who they are a choose their name. </span>	
 					<p>
-						<span class="A-audiobook">The Prydon Academy is located at the northern boarder of Southern Gallifrey at the base of the southern slopes of Mount Cadon (Gallifrey's highest mountain). </span><span class="A-audiobook">The academy city like structure covers 28 square miles. </span><span class="A-audiobook">The facility lacks a dome and is open to the air. Most of the</span><span class="A-audiobook"> </span><span class="A-audiobook"><span class="A-game"><span class="A-audiobook">buildings are ebony colored and</span></span></span><span class="A-audiobook"><span class="A-game"><span class="A-audiobook"> fortress-like, with glass towers and turrets along the top.</span></span></span><span class="A-audiobook"> Covered sky-bridges interconnect them. </span><span class="A-audiobook"><span class="A-game">Perfectly groomed lawns with<span class="A-audiobook"> little blue flowers surround the</span></span></span><span class="A-audiobook"><span class="A-game"><span class="A-audiobook"> buildings with</span></span></span><span class="A-audiobook"><span class="A-game"><span class="A-audiobook">&nbsp;</span>sand filled pathways leading between them.</span></span><span class="A-audiobook"> The majority of the buildings are dormitories, lecture halls, gymnasiums, and eateries.</span><span class="A-audiobook">&nbsp;</span><span class="A-audiobook">The academy has it's own TARDIS cradles and scaphe bays. </span><span class="A-audiobook"></span><span class="A-audiobook"><span class="A-game"></span></span><span class="A-audiobook"></span><span class="A-audiobook"><span class="A-game">Perfectly groomed lawns surround the <span class="A-audiobook">fortress-like ebony buildings with glass turrets, which are accessed by,&nbsp;</span>sand filled pathways and&nbsp;</span></span><span class="A-audiobook">covered sky-bridges. The facility lacks a dome and is open to the air.</span>
+						<span class="A-audiobook">The
+Prydon Academy is located at the northern boarder of Southern Gallifrey
+at the base of the southern slopes of Mount Cadon (Gallifrey's highest
+mountain). </span><span class="A-audiobook">The academy city like structure covers 28 square miles. </span><span class="A-audiobook">The facility lacks a dome and is open to the air. Most of the</span><span class="A-audiobook"> </span><span class="A-audiobook"><span class="A-game"><span class="A-audiobook">buildings are ebony colored and</span></span></span><span class="A-audiobook"><span class="A-game"><span class="A-audiobook"> fortress-like, with glass towers and turrets along the top.</span></span></span><span class="A-audiobook"> Covered sky-bridges interconnect them. </span><span class="A-audiobook"><span class="A-game">Perfectly groomed lawns with<span class="A-audiobook"> little blue flowers surround the</span></span></span><span class="A-audiobook"><span class="A-game"><span class="A-audiobook"> buildings with</span></span></span><span class="A-audiobook"><span class="A-game"><span class="A-audiobook">&nbsp;</span>sand filled pathways leading between them.</span></span><span class="A-audiobook"> The majority of the buildings are dormitories, lecture halls, gymnasiums, and eateries.</span><span class="A-audiobook">&nbsp;</span><span class="A-audiobook">The academy has it's own TARDIS cradles and scaphe bays. </span><span class="A-audiobook"></span><span class="A-audiobook"><span class="A-game"></span></span><span class="A-audiobook"></span><span class="A-audiobook"><span class="A-game">Perfectly groomed lawns surround the <span class="A-audiobook">fortress-like ebony buildings with glass turrets, which are accessed by,&nbsp;</span>sand filled pathways and&nbsp;</span></span><span class="A-audiobook">covered sky-bridges. The facility lacks a dome and is open to the air.</span>
 						<span class="A-audiobook">The Black Collection is stored at this Academy.&nbsp;</span><span class="A-audiobook">The Black Collection is stored at this Academy and </span><span class="A-audiobook">monks </span><span class="A-audiobook"><span class="A-game">taking the mystic studies course spend a great deal of time meditating and </span>learning dark secrets in the upper levels of its towers. </span><span class="A-audiobook">Because this is Gallifrey's only Time Academy (the institution which bestows the title of Time Lord) it is annexed to <span class="A-licensed">Sector 6 of</span> the Citadel <span class="A-fanon">using dimensional junctures, and&nbsp;</span></span><span class="A-infinity">most (if not all) of the </span><span class="A-game">Junior Cardinals and </span><span class="A-infinity">Time Lord Councilors teach at the Time Academy.</span><span class="A-audiobook"></span>
 					</p>
 					<p>
-						<span class="A-audiobook"><span class="A-game">The Arcalian Academy is in the city of Arcalia, and the Patrexi Academy is in the city of Patrexi. </span></span><span class="A-audiobook">The Lodge of the Patrexian Academy is located in the Capitol. It has a gate of solid light with a sphere of the first gold ever formed in the Universe (though it should be noted that most Gold has no special value on Gallifrey).<br><br>All of the Academies have dormitories, lecture halls, TARDIS bays and scaphe ports.&nbsp;</span><span class="A-audiobook"><span class="A-game">They&nbsp;are all bordered by stone walls to keep the students from entering the outlands. </span></span>
+						<span class="A-audiobook"><span class="A-game">The Arcalian Academy is in the city of Arcalia, and the Patrexi Academy is in the city of Patrexi. </span></span><span class="A-audiobook">The
+Lodge of the Patrexian Academy is located in the Capitol. It has a gate
+of solid light with a sphere of the first gold ever formed in the
+Universe (though it should be noted that most Gold has no special value
+on Gallifrey).<br><br>All of the Academies have dormitories, lecture halls, TARDIS bays and scaphe ports.&nbsp;</span><span class="A-audiobook"><span class="A-game">They&nbsp;are all bordered by stone walls to keep the students from entering the outlands. </span></span>
 					</p>
 					<p>
 						<span class="A-audiobook">
@@ -660,11 +667,20 @@ grows as time goes by leaving most in a semi-catatonic state. </span>
 							<span class="A-tv">The
 								<span class="A-audiobook">memory acids</span> held in bottles burble telepathically when opened. </span>
 						</span>
-						<span class="A-audiobook">Despite this, there are a number of major similarities between the Prydon Academy and the schools on Earth in the 20th century. <span class="A-licensed">Pens and paper are often used by students at the Academy.</span> The Warders ensured that the students followed the rules. </span><span class="A-game">Passing grades were difficult to achieve and each grade could take years to reach.&nbsp;<span class="A-audiobook">A-Star Excellent and </span><span class="A-audiobook">A-Star Distinction/Insightful/Outstanding where the highest achievable grades.<br><br></span></span><span class="A-audiobook">In Infant School novices </span><span class="A-tv">learn quantum mechanics which are considered by Gallifreyans to be synomous with poetry. Even the simplest geometry problem is solved using the first 5 dimensions. <span class="A-audiobook">And their cartesian geometry, involves 26 dimensions. Despite all this, one should keep in mind that there are math problems so complex that even the Time Lords haven’t managed to solve them yet. </span> While still Time Tots they read</span><span class="A-audiobook"> 4 dimensional pop-up
+						<span class="A-audiobook">Despite this, there are a number of major similarities between the Prydon Academy and the schools on Earth in the 20th century. <span class="A-licensed">Pens and paper are often used by students at the Academy.</span> The Warders ensured that the students followed the rules. </span><span class="A-game">Passing grades were difficult to achieve and each grade could take years to reach.&nbsp;<span class="A-audiobook">A-Star Excellent and </span><span class="A-audiobook">A-Star Distinction/Insightful/Outstanding where the highest achievable grades.<br><br></span></span><span class="A-audiobook">In Infant School novices </span><span class="A-tv">learn
+quantum mechanics which are considered by Gallifreyans to be synomous
+with poetry. Even the simplest geometry problem is solved using the
+first 5 dimensions. <span class="A-audiobook">And their cartesian
+geometry, involves 26 dimensions. Despite all this, one should keep in
+mind that there are math problems so complex that even the Time Lords
+haven’t managed to solve them yet. </span> While still Time Tots they read</span><span class="A-audiobook"> 4 dimensional pop-up
 							<span class="A-tv">books like
 								<em>Our Planet's Story</em>
 							</span>
-							and<em> Every Gallifreyan Child's Pop-Up Book of Nasty Creatures From Other Dimensions.&nbsp;</em></span><span class="A-audiobook"><span class="A-game"><span class="A-tv"></span></span>They are taught to recite their 2337 times tables. They attend Temporal Protocol classes.&nbsp;</span><span class="A-tv"></span><span class="A-game"><span class="A-tv">They also study mind-shielding, thermodynamics, cybernetics,</span></span><span class="A-audiobook"> medecine, botany,</span><span class="A-game"><span class="A-tv">&nbsp;</span></span><span class="A-game A-audiobook"></span><span class="A-game">and super-logic.&nbsp; </span><span class="A-audiobook">They&nbsp;are also taught how to live and act in society and that all life is sacrosanct and that Gallifreyans need to be dedicated to a life of service to Time.&nbsp;</span><span class="A-audiobook"><span class="A-game"><span class="A-audiobook">Gallifrey's obsessive work ethic of service to the Worshipful and Ancient Law of Gallifrey is instilled in the students.</span></span></span><span class="A-audiobook"> </span>
+							and<em> Every Gallifreyan Child's Pop-Up Book of Nasty Creatures From Other Dimensions.&nbsp;</em></span><span class="A-audiobook"><span class="A-game"><span class="A-tv"></span></span>They are taught to recite their 2337 times tables. They attend Temporal Protocol classes.&nbsp;</span><span class="A-tv"></span><span class="A-game"><span class="A-tv">They also study mind-shielding, thermodynamics, cybernetics,</span></span><span class="A-audiobook"> medecine, botany,</span><span class="A-game"><span class="A-tv">&nbsp;</span></span><span class="A-game A-audiobook"></span><span class="A-game">and super-logic.&nbsp; </span><span class="A-audiobook">They&nbsp;are
+also taught how to live and act in society and that all life is
+sacrosanct and that Gallifreyans need to be dedicated to a life of
+service to Time.&nbsp;</span><span class="A-audiobook"><span class="A-game"><span class="A-audiobook">Gallifrey's obsessive work ethic of service to the Worshipful and Ancient Law of Gallifrey is instilled in the students.</span></span></span><span class="A-audiobook"> </span>
 							<span class="A-game"><br><br></span><span class="A-audiobook"></span><span class="A-audiobook"><em></em><span class="A-game">Child</span></span><span class="A-tv"><span class="A-game"><span class="A-notbbc">rene</span></span></span><span class="A-audiobook"><span class="A-game"> play games that involve <span class="A-tv">slowing their own heart till they appear dead. </span></span></span>
 							<span class="A-tv">Some of the games the child</span><span class="A-tv"><span class="A-game"><span class="A-notbbc">rene</span></span></span><span class="A-tv"> play might involve extra-galactic space travel. </span><span class="A-game">At around 11 or 12 years old most Gallifreyans&nbsp;are&nbsp;given a two foot tall intelligent teddybear-like robot. This&nbsp;</span><span class="A-game">homunculus functioned as a playmate for the child. </span><span class="A-game"></span><span class="A-game"></span><span class="A-audiobook"><br><br><span class="A-tv"></span></span><span class="A-tv"></span><span class="A-audiobook"><span class="A-tv">The </span>Prydon College's <span class="A-tv">Time Academy is the only one that can grant the title of Time Lord</span> – so all would-be Time Lords (regardless of chapter) have to attend it after graduating from their chapter’s academy. </span><span class="A-tv">While, many Gallifreyans (such as future members of the Watch or Traffic Control) attend the <span class="A-audiobook">Prydon</span> Academy, but only a very select
 					few are chosen to become Time Lords. </span><span class="A-audiobook"> Novices take the entrance examination for the
@@ -687,15 +703,28 @@ grows as time goes by leaving most in a semi-catatonic state. </span>
 					<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 					<h2>ADULTHOOD</h2>
 					<div class="section">
-						<span class="A-game">Once out of school most Gallifreyans become bored and take up a hobby or begin working some sort of job to help the community. The Gallifreyans who left their academy after reaching the 5th Grade generally became media commentators, artists or aids for Cardinals, or even aids for Junior Time Lords. Passing the 6th grade opened up several job opportunities, including administration and maintenance of the Citadel, Space Traffic Controller, junior technicians, Temporal Nexus Point Observation researcher, lab assistant, or service in the Watch. </span>
-						<span class="A-tv">Graduating from the 7th Grade was considered even more difficult and prestigious, but many Gallifreyans stop attending before that point.</span>
+						<span class="A-game">Once
+out of school most Gallifreyans become bored and take up a hobby or
+begin working some sort of job to help the community. The Gallifreyans
+who left their academy after reaching the 5th Grade generally became
+media commentators, artists or aids for Cardinals, or even aids for
+Junior Time Lords. Passing the 6th grade opened up several job
+opportunities, including administration and maintenance of the Citadel,
+Space Traffic Controller, junior technicians, Temporal Nexus Point
+Observation researcher, lab assistant, or service in the Watch. </span>
+						<span class="A-tv">Graduating
+from the 7th Grade was considered even more difficult and prestigious,
+but many Gallifreyans stop attending before that point.</span>
 						<br> 
 					</div>
 					<div class="section">
 						<span class="A-tv">Gallifreyans are not considered
 							<span class="A-audiobook">legal </span>adults until they reach
 							<span class="A-audiobook">their majority at</span> 200 years old. </span>
-						<span class="A-audiobook">A Gallifreyan who is almost 400 years old is a legal adult, but he will still be viewed as an adolescent by the elders until he can taste his own tongue. </span>
+						<span class="A-audiobook">A
+Gallifreyan who is almost 400 years old is a legal adult, but he will
+still be viewed as an adolescent by the elders until he can taste his
+own tongue. </span>
 					</div>
 				</div>
 				<div class="article" id="outsider" style="padding-top: 160px; margin-top: -160px;">
@@ -973,8 +1002,8 @@ chamber. <span class="A-licensed">A Director of Calm oversees operations.</span>
 						<span class="A-game">Other Gallifreyans prefer the more complete relaxation of retreating to zero environments.<br><br> </span>
 					</div>
 					<div class="section">
-						<span class="A-tv">Media entertainment <span class="A-licensed">holo</span>vids are provided by Public Register Video whichis provided on
-							<span class="A-alternate">plasma image </span><span class="A-audiobook">media-</span>screens.&nbsp; video all the ceremonies and traditions. There are over 87,656,432 Media
+						<span class="A-tv">Media entertainment <span class="A-licensed">holo</span>vids are provided by Public Register Video <span class="A-audiobook">and Public Access Television,</span> whichis is viewd on
+							<span class="A-alternate">plasma image </span><span class="A-audiobook">media-</span>screens.&nbsp; Public Register Video covers all major&nbsp;ceremonies and traditional events. There are over 87,656,432 Media
 							<span class="A-game">Services </span>channels. </span>
 						<span class="A-alternate">There is a Presidential Bulletin issued every day with all the news about Capitol. The Observatories provides official
 							reports of what has happens throughout the cosmos. Much of it focuses on stellar weather patterns. </span>
