--- a/roogovernment.html
+++ b/roogovernment.html
@@ -593,7 +593,10 @@ graveyard.)<br><br></span></span></div><div class="section">
 							<span class="A-fanon">Service </span>Area </span>
 					</figcaption>
 				</figure>
-				<span class="A-tv">The foundation of the Citadel is known as the vaults. These chambers date back to the Old Time. </span>
+				<span class="A-tv">The
+foundation of the Citadel is known as the vaults. They are found in and
+around the massive caldera like hole beneath the Capitol city. These
+chambers date back to the Old Time. </span>
 				<span class="A-audiobook"><span class="A-licensed"><span class="A-tv"></span>
 					</span>
 				</span>
@@ -601,8 +604,7 @@ graveyard.)<br><br></span></span></div><div class="section">
 				<span class="A-tv"></span><span class="A-game">Life support for the Capitol is provided my huge recycling systems, such as</span>
 				<span class="A-audiobook">tachyonic recreation fabricators to create physical materials, and the Main Water Pumping Station in the vaults of the Citadel. </span><span class="A-audiobook">The Pumping Station is off limits to unauthorized personnel, even Time Lords.</span> <span class="A-tv">Within the Vaults can be found </span>
 				<span class="A-audiobook">the power couplings for the eastern part of the Capitol, and a <span class="A-tv"></span>fluctuating </span>
-				<span class="A-tv">access point for the matrix.</span><span class="A-audiobook"> Half a mile <span class="A-tv">beneath the Capitol is the city's foundations, the remains of the original Capitol,&nbsp;</span></span><span class="A-audiobook">including </span><span class="A-audiobook">the once regal Pazithi Cloisters <span class="A-licensed">and other acient temple adyta.</span></span><span class="A-audiobook">
-Buried deep underground are fallout shelters and Catacombs whose total
+				<span class="A-tv">access point for the matrix.</span><span class="A-audiobook"> Half a mile <span class="A-tv">beneath the Capitol is the city's foundations, the remains of the original Capitol,&nbsp;</span></span><span class="A-audiobook">including </span><span class="A-audiobook">the once regal Pazithi Cloisters <span class="A-licensed">and other ancient temples.</span></span><span class="A-audiobook"><span class="A-notbbc"> At the bottom of the caldera </span><span class="A-licensed">is the vault that holds the Eye of Harmony. </span>Buried deep underground are fallout shelters and Catacombs whose total
 length (if arranged end to end) would exceed the diameter of Gallifrey.</span>
 			<figure>
 				<img src="images/omegaarsenal.jpg" alt="Omega Arsenal">
@@ -873,7 +875,9 @@ realities. <span class="A-audiobook">Rassilon would replace the position with th
 					Together, these most senior Time Lords of the Inner Council 
 					<span class="A-notbbc">represent the most powerful of the Great Houses of Gallifrey.<span class="A-game"> </span>Traditionally there are only
 						5 members of the Inner Council, but,
-						<span class="A-licensed">throughout Gallifrey's History the number has ranged from 3 to 7. President Borusa decried that the Castellan&nbsp;be included on the Council. </span>
+						<span class="A-licensed">throughout
+Gallifrey's History the number has ranged from 3 to 7. President Borusa
+decried that the Castellan&nbsp;be included on the Council. </span>
 					</span>
 					<span class="A-notbbc">Despite the various elections and appointments, the actual Houses represented on the Inner Council rarely change, and it is
 						very rare for any Newblood House to be represented at all. </span></span><span class="A-licensed"><span class="A-notbbc"><span class="A-game">In most cases, members of the Inner Council are between 6,000 and 10,000 years old.</span></span></span></div>
