--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -1333,15 +1333,11 @@ weeks but the number of days in a week hasn't been revealed <span class="A-fanon
 							</p><ul>
 								<li>
 									<span class="A-tv">
-										<span style="font-weight: bold;">Local Dateline: </span>
-									</span>
-									<span class="A-audiobook">(Mission to Magnus, The Gallifrey Chronicles,</span>
+										<span style="font-weight: bold;">Local Dateline </span></span><span class="A-tv"><span style="font-weight: bold;"><span class="A-audiobook"><span class="A-game">/ Gallifreyan Absolute Time:&nbsp;</span></span></span></span><span class="A-tv"><span style="font-weight: bold;"></span></span><span class="A-audiobook">(Mission to Magnus, The Gallifrey Chronicles,</span>
 									<span class="A-tv">TV Movie) - </span>
 									<span class="A-licensed">This form of Time Lord Dating began with the installation of the Eye of Harmony in the Citadel - which was the beginning
 										of the Rassilon Era. </span>
-									<span class="A-audiobook">For this reason the dates are given with the prefix RE for Rassilon Era. The Doctor would have been loomed in</span>
-									<span class="A-fanon"> 200</span><span class="A-audiobook">4716</span><span class="A-licensed">.44</span>
-									<span class="A-audiobook"> (The Gallifrey Chronicles claim the Doctor was loomed on 4756.7 RE But this is 40.5 years off from all other sources).
+									<span class="A-audiobook">For this reason the dates are given with the prefix RE for Rassilon Era. </span><span class="A-tv"><span class="A-audiobook">Documents the passage of time from the point of view of the people living within Gallifrey's Inner Time. </span></span><span class="A-audiobook">The Doctor would have been loomed in</span><span class="A-fanon"> 200</span><span class="A-audiobook">4716</span><span class="A-licensed">.44</span><span class="A-audiobook"> (The Gallifrey Chronicles claim the Doctor was loomed on 4756.7 RE But this is 40.5 years off from all other sources).
 									</span>
 									<span class="A-tv">For convenience sake Time Lords usually abbreviate Local Date Line to five digits (ie 5725.2 RE). </span>
 									<ul>
@@ -1349,16 +1345,15 @@ weeks but the number of days in a week hasn't been revealed <span class="A-fanon
 											<span class="A-fanon">The Relative Date can be found by adding 2004716.44 to the Doctor's age. </span>
 										</li>
 										<li>
-											<span class="A-audiobook">The Local Dateline (ie the 4 diget version) can be found by adding 4716.
-												<span class="A-licensed">44</span> to the Doctor's age. </span>
+											<span class="A-audiobook">The Local Dateline (ie the 4 diget version) can be found by adding 4716.<span class="A-licensed">44</span> to the Doctor's age. </span>
 										</li>
 									</ul>
 								</li>
 								<li>
 									<span class="A-tv">
-										<span style="font-weight: bold;">Date Index: </span>(Deadly Assassin, Armageddon Factor, </span>
+										<span style="font-weight: bold;">Date Index <span class="A-audiobook">/ Gallifrey Mean Time: <span class="A-game"></span></span></span>(Deadly Assassin, Armageddon Factor, </span>
 									<span class="A-audiobook">The Gallifrey Chronicles) - </span>
-									<span class="A-tv">Date Indexes can be written 3-0-9-9-0-6 or it can be abbreviated to 2 digits (ie 92). </span>
+									<span class="A-tv">Date Indexes can be written 3-0-9-9-0-6 or it can be abbreviated to 2 digits (ie 92). <span class="A-audiobook">Documents the passage of time from the point of view of the people living within Gallifrey's Inner Time.</span> </span>
 									<ul>
 										<li>
 											<span class="A-audiobook">Date Index (DI) can be found by adding 309456 to the Doctor's Age. </span>
@@ -1371,8 +1366,7 @@ weeks but the number of days in a week hasn't been revealed <span class="A-fanon
 										<span class="A-audiobook">TL Dating System: </span>
 									</span>
 									<span class="A-game">(FASA,</span>
-									<span class="A-audiobook">The Gallifrey Chronicles)</span> -
-									<span class="A-game">TL works like the Relative Date system, </span><span class="A-audiobook">thus 2004756.44 RE would be 100447 TL. </span>
+									<span class="A-audiobook">The Gallifrey Chronicles) -&nbsp;</span><span class="A-game">TL works like the Relative Date system, </span><span class="A-audiobook">thus 2004756.44 RE would be 100447 TL. </span>
 										<ul>
 											<li>
 												<span class="A-game">A TL Date can be found by adding 100448 to the Doctor's Age. </span>
@@ -1398,8 +1392,7 @@ weeks but the number of days in a week hasn't been revealed <span class="A-fanon
 									<ul>
 										<li>
 											<span class="A-audiobook"> While it is based on anchoring of the Eye of Harmony, any Earth date can be translated into Local Dateline (LD)
-												by adding 35</span>
-											<span class="A-fanon">03412400.2 </span>
+												by adding 35</span><span class="A-fanon">03412400.2 </span>
 											<span class="A-audiobook">(about 3.5 billion) to the Earth year if after 1 BC</span>
 											<span class="A-fanon"> or 3503412399.2 if before 1 AD. </span>
 										</li>
@@ -1409,7 +1402,7 @@ weeks but the number of days in a week hasn't been revealed <span class="A-fanon
 									<span style="font-weight: bold;">
 										<span class="A-audiobook">GRT </span>
 									</span>
-									<span class="A-audiobook">(Gallifrey Relative mean Time) </span>
+									<span class="A-audiobook">(Gallifrey Relative Time) </span>
 									<span class="A-fanon">(Timelink, </span>
 									<span class="A-audiobook">The Gallifrey Chronicles) - GRT </span>
 									<span class="A-game">effectively gives the Date in Humanian Era AD/BC dates. </span>
