Web of Time done

--- a/roobiology.html
+++ b/roobiology.html
@@ -794,20 +794,18 @@ every Gallifreyan has a unique psycho-kinetic signature, this allows</span>
 				</span>
 				<span class="A-audiobook">Its even easier for a Gallifreyan to contact another version of themselves (especially if they are in the same time zone).</span>
 				<span class="A-audiobook">
-					<span class="A-tv"> If they are trying to telepathically contact one of their own incarnations they don't even need to be touching. Indeed
-						such contact can be made via the astral plane
-						<span class="A-alternate"> (the 4th Dimension) </span>over galactic distances and times.
-						<span class="A-audiobook">Time Lords attempting to send telepathic signals through the Astral Vortex can encode them with their own psychic patterns.
+					<span class="A-tv"> <br><br>If they are trying to telepathically contact one of their own incarnations they don't even need to be touching. Indeed
+						such contact can be made via the astral </span></span><span class="A-audiobook"><span class="A-tv"><span class="A-audiobook">(the 5th Dimension) </span></span></span><span class="A-audiobook"><span class="A-tv">plane&nbsp;<span class="A-alternate A-audiobook"></span>over galactic distances and times.
+						</span></span><span class="A-audiobook"> Psychic pulses travel at a 170,000 times the speed of light. </span><span class="A-audiobook"><span class="A-tv"><span class="A-audiobook">Time Lords attempting to send telepathic signals through the Astral Vortex can encode them with their own psychic patterns.
 							This makes it impossible for anyone to decode the message except a future or past version of the transmitting Time
-							Lord. </span> Care should be taken as interruption while accessing the Astral Plane
-						<span class="A-fanon">can leave the Gallifrey's mind trapped in the Vortex,</span> thus killing his body. Deja Vu is another form of Astral
-						Projection. </span>
-				</span>
-				<span class="A-audiobook"> Psychic pulses travel at a 170,000 times the speed of light. The strong psychic empathy field which Gallifreyans have</span>
+							Lord. </span> Care should be taken as interruption while accessing the Astral Plane&nbsp;<span class="A-fanon">can leave the Gallifrey's mind trapped in the Vortex,</span> thus killing his body. <span class="A-fanon">The artron energy of </span></span></span><span class="A-audiobook"><span class="A-tv"><span class="A-audiobook">the
+Astral Vortex can charm and enchant even a Time Lord's mind to the
+point where they might not have the willpower to return to the three dimensional world.</span></span></span><span class="A-audiobook"><span class="A-tv"> Deja Vu is another form of Astral
+						Projection. <br><br></span></span><span class="A-audiobook">The strong psychic empathy field which Gallifreyans have</span>
 				<span class="A-audiobook">
-					<span class="A-tv">allows them to hypnotize others. Some of them can telepathically block
-						<span class="A-audiobook">or scramble</span> a person's memories back to an arbitrary point in their life. </span>They can also implant post-hypnotic
-					suggestions in people who are trying to read their minds. <br><br></span>
+					<span class="A-tv">allows them to hypnotize others. Eye contact appears to be nessecary for this to happen <span class="A-fanon">(probably because</span> <span class="A-notbbc">artron energy is the energy of perception itself).</span> Some of them can telepathically block
+						<span class="A-audiobook">or scramble</span> a person's memories back to an arbitrary point in their life. </span>They can even implant post-hypnotic
+					suggestions in people who are trying to read their minds. </span><span class="A-audiobook"></span><span class="A-audiobook"><br><br></span>
 			</div>
 			<div class="section">
 				<span class="A-audiobook"><span class="A-game">Artron
@@ -815,7 +813,7 @@ echos are emited by all sapient beings. The greater affect that a
 person is going to have on coming history the stronger the echos.&nbsp;</span>Every Time Lord possesses an entire quantum of Artron Energy which gives them a unique artron energy signature.&nbsp;</span><span class="A-audiobook">Time
 Lords tend to accumulate more artron energy as they travel the Vortex.
 &nbsp;To prevent it from reaching dangerous levels, the amount possesed
-is reset with each regeneration. &nbsp;Gallifreyans generate Artron
+is reset with each regeneration. Gallifreyans generate Artron
 Energy traces that can be used by others to determine their age and
 identity. </span>
 				<span class="A-audiobook"></span><span class="A-licensed">This is significantly more life-energy than a human has.</span><span class="A-audiobook"><span class="A-fanon"> </span>This is because Artron Energy levels are determined in part by the subjects total life-span (past and future). <span class="A-fanon">It's possible that Gallifreyan females might be more gifted with telepathic abilities.</span> </span><span class="A-audiobook"></span><span class="A-audiobook">The energy they possess increases by a minute amount every time they pass through the Vortex.
@@ -1387,8 +1385,7 @@ many new ones are created. </span>A blinded Gallifreyan will regain their
 							<span class="A-notbbc"> </span>occasions</span></span></span><span class="A-fanon"><span class="A-audiobook"><span class="A-fanon"></span></span></span><span class="A-fanon"><span class="A-audiobook"><span class="A-tv">. On other occasions Time Lords have copied the bodies of humans they have seen.</span></span></span><span class="A-tv"> <span class="A-licensed">Under some circumstances an adult Gallifreyan can regenerated into a child<span class="A-notbbc">e.</span></span> It is possible for a Gallifreyan's sex to change during regeneration</span>
 				<span class="A-alternate">
 					<span class="A-game">if the regeneration particularly traumatic</span>&nbsp;(often&nbsp;if the Gallifreyan regenerates by choosing to committing
-					suicide). This is known as a Sex Change Regeneration </span><span class="A-alternate">
-and was illegal procedure in some alternate timelines but not among the Gallifreyans of the Prime Timeline.</span><span class="A-fanon"><span class="A-audiobook">&nbsp;</span></span><span class="A-tv"><span class="A-audiobook"><span class="A-game"><span class="A-fanon"><span class="A-tv"></span></span></span></span></span><span class="A-tv"><span class="A-audiobook"><span class="A-game"><span class="A-fanon"><span class="A-tv"></span></span></span></span></span><br><span class="A-tv"><span class="A-audiobook"><span class="A-game"><span class="A-fanon"><span class="A-tv"><br>Gallifreyans</span></span></span></span></span><span class="A-audiobook"> from Newblood Houses have amazing control over
+					suicide). This is known as a Sex Change Regeneration. <span class="A-infinity">Approximately 10% of Gallifrey's population is female. </span></span><span class="A-fanon A-infinity"><span class="A-audiobook"></span></span><span class="A-tv A-infinity"><span class="A-audiobook"><span class="A-game"><span class="A-fanon"><span class="A-tv"></span></span></span></span></span><span class="A-tv A-infinity"><span class="A-audiobook"><span class="A-game"><span class="A-fanon"><span class="A-tv"></span></span></span></span></span><br><span class="A-tv"><span class="A-audiobook"><span class="A-game"><span class="A-fanon"><span class="A-tv"><br>Gallifreyans</span></span></span></span></span><span class="A-audiobook"> from Newblood Houses have amazing control over
 there regenerations which<span class="A-tv"> allows them to try on several different genetic templates (and appearances)<span class="A-game"> during the first 60 minutes of</span>&nbsp;a regeneration. </span>This
 					technique can be taught with some success to Gallifreyans from the Old Blood Houses. </span>
 				<span class="A-audiobook">Some are even capable of temporarily regenerating their genetic makeup enough to fool some types of gene scanners without
@@ -1543,8 +1540,8 @@ normal biological energy levels. </span><span class="A-tv"><span class="A-game">
 					set up this automatic decay because he didn't want any Time Lord to become immortal and possibly become greater than
 					him.</span><span class="A-tv"> <span class="A-notbbc">During the Time War the number of regenerations availible to a Time Warrior would be expanded safely to well over 60.</span></span><span class="A-audiobook"> </span><span class="A-audiobook"><span class="A-fanon"><br><br></span></span><span class="A-audiobook">If a Gallifreyan's morphic print is
 destabilized it can lead to them being physically regressed back
-through previous incarnations. &nbsp;This occurs because the Gallifreyan's
-body is instinctively trying to find a stable morphic print. &nbsp;The
+through previous incarnations. This occurs because the Gallifreyan's
+body is instinctively trying to find a stable morphic print. The
 interior of TARDIS <span class="A-fanon">or similar stabilizing facility such&nbsp;as a Metamorphic Symbiosis Regenerator,</span> can hault this
 phenomenon, and a personal morphic stabilizer can be used to allow the
 Gallifreyan to move freely. <br><br></span>
