--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -377,9 +377,7 @@ will. </span> Death, Time, and Pain might be the dreams of Time Lords which leak
 					<span class="A-audiobook">Indeed, most Time Lords consider notions of good and evil to outdated, archaic, redundant, or even incomprehensible.
 						And sin is not a concepts that can be found in Gallifreyan culture. </span>
 					<span class="A-tv">Damaging History is about as close to evil as Gallifreyan culture gets. </span>
-					<span class="A-game">Other Gallifreyans (including the Doctor) believe in The Great Moral Dialectic. It states that the Moral Universe refines
-						itself towards goodness just as the physical Universes keeps expanding. </span>
-					<span class="A-audiobook">According to Gallifreyan science, the only thing that can stand against entropy and random decay is Life. Reality leads
+					<span class="A-game">Other Gallifreyans (including the Doctor) believe in The Great Moral Dialectic. It states that </span><span class="A-game">as the physical Universes keeps expanding, </span><span class="A-tv">the Moral Universe continually refines itself towards goodness to maintain balance with evil.&nbsp;</span><span class="A-audiobook">According to Gallifreyan science, the only thing that can stand against entropy and random decay is Life. Reality leads
 						to complexity, which leads to life, which leads to civilization, which leads to ethics. </span>
 					<span class="A-game">This will lead to the ultimate superiority of Good over Evil.</span><br><br><span class="A-audiobook">Time Lords have also been known to mention a Devil from time to time. The Time Lord mythology speaks of the Dark God
 						Valdemar who was destroy by the Old Ones. The battle to achieve this took centuries and is regarded as the biggest
@@ -909,9 +907,7 @@ all activity. <span class="A-fanon">For this reason </span>some areas are config
 								<span class="A-audiobook"> Pounds, </span>
 							</span>Guineas
 <span class="A-licensed">and even ancient Treazant coins&nbsp;</span>are all used as currency. A guinea will buy you a few drinks in a bar.
-Gallifrey has Inheritance Laws and Temporal Taxation,&nbsp;<span class="A-tv"><span class="A-notbbc">however most uses of currency on Gallifrey appear to be completely symbolic and ritualistic. </span>
-								<span class="A-fanon">
-									For this reason</span> Gallifrey has very low potential for commercial development. </span></span><span class="A-game">Even the unemployed have a standard of living greater then most beings in the cosmos. While there is no requirement
+Gallifrey has Inheritance Laws and Temporal Taxation,&nbsp;<span class="A-tv"><span class="A-notbbc">however most uses of currency on Gallifrey appear to be completely symbolic and ritualistic. Many </span></span></span><span class="A-audiobook"><span class="A-tv">Gallifreyans don't actually understand how money works or what the orginal point of it is.</span></span><span class="A-audiobook"><span class="A-tv"> <span class="A-fanon">For these reasons</span> corperations judge Gallifrey to have a very low potential for&nbsp;commercial development. </span></span><span class="A-game">Even the unemployed have a standard of living greater then most beings in the cosmos. While there is no requirement
 							to be employed, once out of school most Gallifreyans become bored and take up a hobby or begin working some sort of
 							job to help the community. </span>
 						<span class="A-audiobook">Each generation of Time Lords devise increasingly complicated traditions and rites to prevent the Gallifreyan people
